# three_phase_slave

./: CMakeLists.txt
cmake/: arm-none-eabi.cmake
linker/: sam3x8e_flash.ld
params/: param.c
src/: init.c  main.c  sin_lut_1024.c  uart.c
src/include/: init.h  param.h  sin_lut_1024.h  uart.h
startup/: SAM3XA_Vectors.s  SAM3X_Startup.s  startup_sam3x8e.c
tools/: jlink_flash_sam3x8e.jlink
